# iqengine-plugin-rs

./: .openapi-generator-ignore  Cargo.toml  Makefile  README.md  plugins_openapi_adapted.yaml
.openapi-generator/: FILES
docs/: Annotation.md  DefaultApi.md  FunctionNameGet200Response.md  FunctionNameGet200ResponseCustomParamsValue.md  FunctionNameGet200ResponseCustomParamsValueType.md  FunctionNamePost200Response.md  FunctionNamePostRequest.md  SamplesB64.md  SamplesCloud.md
src/: lib.rs
src/apis/: configuration.rs  default_api.rs
src/models/: __function_name__get_200_response.rs  __function_name__get_200_response_custom_params_value.rs  __function_name__get_200_response_custom_params_value_type.rs  __function_name__post_200_response.rs  __function_name__post_request.rs  annotation.rs  data_type.rs  mod.rs  samples_b64.rs  samples_cloud.rs
src/server/: annotation.rs  custom_param_type.rs  data_object.rs  data_type.rs  error.rs  function.rs  function_output.rs  function_parameter.rs  function_post_request.rs  function_post_response.rs  function_runner.rs  job_result_response.rs  job_status.rs  job_status_response.rs  job_storage.rs  job_store.rs  metadata.rs  metadata_cloud.rs  metadata_file.rs  mod.rs  orchestrator.rs  output.rs  plugin.rs  samples_b64.rs  samples_cloud.rs  server.rs
