[package]
name = "iqengine-plugin"
version = "0.0.1"
authors = ["OpenAPI Generator team and contributors", "Loïc Fejoz <loic@fejoz.net>"]
description = "The plugins API is a unified open interface for managing the processing of RF recordings and corresponding dataflow, with the goal of standardizing inputs and outputs to RF processing functions for easy of interoperability and to combat vendor lockin. The plugins API is planned to be converted to an OpenAPI spec once its further refined.  It will use JSON for the fields. "
# Override this license by providing a License Object in the OpenAPI.
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
hound = "3.5.1"
num-complex = "0.4.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "1.0.50"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
