[package]
name = "iqengine-plugin"
version = "0.0.2"
authors = ["Loïc Fejoz <loic@fejoz.net>"]
description = "The plugins API is a unified open interface for managing the processing of RF recordings and corresponding dataflow, with the goal of standardizing inputs and outputs to RF processing functions for easy of interoperability and to combat vendor lockin. The plugins API is planned to be converted to an OpenAPI spec once its further refined.  It will use JSON for the fields. "
license = "Apache-2.0"
edition = "2021"

[features]
default=['axum']
axum=['dep:axum']

[dependencies]
anyhow = "1.0.75"
axum = {version="0.7.5", features = ["macros", "multipart"], optional=true}
azure_core = "0.16.0"
azure_storage = "0.16.0"
azure_storage_blobs = "0.16.0"
base64 = "0.21.5"
futures = "0.3.29"
hound = "3.5.1"
num-complex = "0.4.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "1.0.50"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
